test/typecheck/bad-cast-type-mismatch.txt
;;; ERROR: 1
(module
  (func
    f32.const 0
    f32.reinterpret/i32
    drop))
(;; STDERR ;;;
out/test/typecheck/bad-cast-type-mismatch.txt:5:5: error: type mismatch in f32.reinterpret/i32, expected i32 but got f32.
    f32.reinterpret/i32
    ^^^^^^^^^^^^^^^^^^^
;;; STDERR ;;)
